[package]
name = "utwt"
description = "Parsing utmp file"
keywords = ["utmp", "linux", "login", "wtmp"]
categories = ["os::unix-apis"]
version = "0.4.0"
authors = ["cijiugechu <cijiugechu@gmail.com>", "Xidorn Quan <me@upsuper.org>"]
repository = "https://github.com/cijiugechu/utwt"
readme = "README.md"
edition = "2021"
license = "MIT"

[dependencies]
libc      = "0.2.153"
utmp-raw  = { git = "https://github.com/Unpublished/utmp-rs" }
thiserror = "1.0.58"
zerocopy  = "0.6"

[dev-dependencies]
anyhow = "1.0.81"
once_cell = "1.19"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = ["aarch64-unknown-linux-gnu"]
