[package]
name = "utwt"
description = "Parsing utmp file"
keywords = ["utmp", "linux", "login", "wtmp"]
categories = ["os::unix-apis"]
version = "0.4.0"
authors = ["cijiugechu <cijiugechu@gmail.com>", "Xidorn Quan <me@upsuper.org>"]
repository = "https://github.com/cijiugechu/utwt"
readme = "README.md"
edition = "2021"
license = "MIT"

[dependencies]
libc      = "0.2.154"
utmp-raw  = { git = "https://github.com/Unpublished/utmp-rs" }
thiserror = "2.0.0"
zerocopy  = "0.7.32"

[dev-dependencies]
anyhow = "1.0.82"
once_cell = "1.19"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = ["aarch64-unknown-linux-gnu"]
